:art: feat: Update style.css

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-  * Theme Name: Boreal
-  * Author: Astrahoshi
-  * Version: 1.0.0
+  * Theme Name: Borealis
+  * Author: Kirinaki
+  * Version: 1.0.1
 */
