--- a/resources/views/layouts/base.twig
+++ b/resources/views/layouts/base.twig
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="{{ site.description }}">
     <link rel="pingback" href="{{ site.pingback_url }}"/>
+    <title>Borealis</title>
     {% block styles %}{% endblock %}
     {{ wp_head() }}
 </head>
